--- a/index.css
+++ b/index.css
@@ -24,13 +24,13 @@ body
         'F o i L m P q z a';
 }
 
-.topSpace
+.top-space
 {
     grid-area: g;
     background: white;
 }
 
-.rightSpace
+.right-space
 {
     grid-area: a;
     margin: 12px;
@@ -39,7 +39,7 @@ body
     justify-content: flex-end;
 }
 
-.userCard
+.user-card
 {
     width: 148px;
     background-color: white;
@@ -53,7 +53,7 @@ body
     font-weight: bold;
 }
 
-.userCard::first-letter
+.user-card::first-letter
 {
     color: red;
 }
@@ -63,7 +63,7 @@ body
     grid-area: b;
 }
 
-.newsTitle
+.news-title
 {
     display: flex;
     flex-direction: row;
@@ -74,7 +74,7 @@ body
     margin-left: 16px;
 }
 
-.newsTitle > div:not([class='date'])
+.news-title > div:not([class='date'])
 {
     color: #0054b9;
     font-size: 18px;
@@ -82,17 +82,19 @@ body
     cursor: pointer;
 }
 
-.newsTitle > div:not([class='date']):hover
+.news-title > div:not([class='date']):hover
 {
     color: #c00;
 }
 
-.newsContent
+.news-content
 {
     position: relative;
+    list-style: none;
+    padding: 0;
 }
 
-.newsContent > span
+.news-content > li
 {
     display: inline-block;
     list-style-type: none;
@@ -100,12 +102,12 @@ body
     cursor: pointer;
 }
 
-.newsContent > span:hover
+.news-content > li:hover
 {
     color: #c00;
 }
 
-.newsContent > span::before
+.news-content > li::before
 {
     margin-left: 6px;
     margin-right: 6px;
@@ -113,7 +115,7 @@ body
     color: black;
 }
 
-.newsFin
+.news-fin
 {
     margin-left: 16px;
     display: flex;
@@ -121,22 +123,22 @@ body
     align-items: baseline;
 }
 
-.newsFin > div
+.news-fin > div
 {
     margin-right: 16px;
 }
 
-.newsFin > div > span:first-child
+.news-fin > div > span:first-child
 {
     font-weight: bold;
 }
 
-.leftSpace
+.left-space
 {
     grid-area: c;
 }
 
-.leftSpace > span
+.left-space > span
 {
     position: absolute;
     left: 36px;
@@ -145,7 +147,7 @@ body
     cursor: pointer;
 }
 
-.leftSpace > span:hover
+.left-space > span:hover
 {
     color: red;
 }
@@ -155,7 +157,7 @@ body
     grid-area: s;
 }
 
-.searchTitle
+.search-title
 {
     display: flex;
     flex-direction: row;
@@ -163,7 +165,7 @@ body
     line-height: 36px;
 }
 
-.searchTitle > div
+.search-title > div
 {
     font-size: 15px;
     margin-right: 20px;
@@ -171,12 +173,12 @@ body
     cursor: pointer;
 }
 
-.searchTitle > div:hover
+.search-title > div:hover
 {
     color: #c00;
 }
 
-.searchInput
+.search-input
 {
     display: flex;
     align-items: center;
@@ -213,7 +215,7 @@ body
     border-right: 0;
 }
 
-.searchHelp
+.search-help
 {
     line-height: 28px;
     display: flex;
@@ -237,17 +239,12 @@ body
     margin-bottom: 10px;
 }
 
-.poseshaemoe > div > span:first-child
-{
-    font-weight: bold;
-}
-
 .anekdot
 {
     height: 180px;
 }
 
-.gradientBox
+.gradient-box
 {
     color: white;
     width: 80px;
@@ -270,33 +267,33 @@ body
     margin-bottom: 10px;
 }
 
-.tvTitle
+.tv-title
 {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.shadowTop
+.shadow-top
 {
     width: 100%;
     box-shadow: 0 -2px 10px 10px white;
     z-index: 1000;
 }
 
-.prokrutka
+.scroll
 {
     height: 240px;
     background: #fff;
     overflow: scroll;
 }
 
-.prokrutka > div
+.scroll > div
 {
     margin-bottom: 10px;
 }
 
-.prokrutka > div > span:last-child
+.scroll > div > span:last-child
 {
     color: #999;
     font-size: 10px;
@@ -307,14 +304,14 @@ body
     grid-area: q;
 }
 
-.infoBox
+.info-box
 {
     display: flex;
     flex-direction: column;
     margin-bottom: 24px;
 }
 
-.maps > .titleBlue ~ span
+.maps > .title-blue ~ span
 {
     font-weight: bold;
     margin-bottom: 10px;
@@ -347,7 +344,7 @@ body
     max-width: 120px;
 }
 
-.titleBlue
+.title-blue
 {
     font-size: 18px;
     color: #0054b9;
@@ -356,7 +353,7 @@ body
     cursor: pointer;
 }
 
-.titleBlue:hover
+.title-blue:hover
 {
     color: #c00;
 }
@@ -373,18 +370,18 @@ body
     margin-top: 18px;
 }
 
-.linkTo
+.link-to
 {
     color: #999;
     cursor: pointer;
 }
 
-.linkTo:hover
+.link-to:hover
 {
     color: #c00;
 }
 
-.linkTo::before
+.link-to::before
 {
     content: ' ';
 }
